@@ -73,6 +73,7 @@ fixed bugs:
 - fixed bug in cons_linear w.r.t recalculation of unreliable activities
 - fixed bug with strong branching with the LP status for conflict analysis
 - fixed bug in scip.c adding a constraint in SCIPgetConsCopy() to the constraint hashmap
+- fixed bug in shiftandpropagate w.r.t. SCIPconstructLP() which can have the side effect that variables are created
 
 parameters:
 - new parameter <presolving/convertinttobin/maxdomainsize> by default is set to SCIP_LONGINT_MAX, which deternmines
